Profiles Page + Back Button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="plant_2">Plant 2</string>
     <string name="humidity">Humidity</string>
     <string name="plantinator">PlantInator</string>
+    <string name="profiles">Profiles</string>
+    <string name="back">Back</string>
 </resources>
