--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="plantButton_3">Plant 3</string>
     <string name="plantButton_2">Plant 2</string>
     <string name="plantButton_1">Plant 1</string>
+    <string name="plantTitle_1">Plant 1</string>
 </resources>
