Plant2 Title + Back Button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="plantButton_2">Plant 2</string>
     <string name="plantButton_1">Plant 1</string>
     <string name="plantTitle_1">Plant 1</string>
+    <string name="plantTitle_2">Plant 2</string>
 </resources>
