Plant3 Title + Back Button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="plantButton_1">Plant 1</string>
     <string name="plantTitle_1">Plant 1</string>
     <string name="plantTitle_2">Plant 2</string>
+    <string name="plantTitle_3">Plant 3</string>
 </resources>
