Send Plant2 Type to Firebase

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="plantTitle_1">Plant 1</string>
     <string name="plantTitle_2">Plant 2</string>
     <string name="plantTitle_3">Plant 3</string>
-
+    <string name="save">save</string>
 
 
 </resources>
